--- a/src/components/login.css
+++ b/src/components/login.css
@@ -95,3 +95,10 @@
 .btn-success:hover {
     opacity: 1;
 }
+
+@media screen and (max-width:600px) {
+    .login {
+        flex-direction: column;
+        height: auto;
+    }
+}
